# deep-learning

./: .gitignore  README.md  pyproject.toml
src/: hello_world.ipynb
src/m.1.1/: 002-pandas-sklearn.ipynb  003-home-price-prediction.ipynb  004-multivariate-linear-regression.ipynb  006-random-forest.ipynb  007-keras.ipynb  008-cnn-small-image.ipynb  009-face-detection-opencv.ipynb  CNN_small_image_classification.ipynb  CNNclassif.ipynb  Kfold.ipynb  Kmean.ipynb  PickleJob.ipynb  dataPreparation.ipynb  descision_tree.ipynb  gradient_descent.ipynb  logistic_regression_multiclass_classification.ipynb  logistics_regression.ipynb  multivariant_linear_regression.ipynb  question-2.ipynb  question-3.ipynb  question.md  question_1.ipynb  tensorflow_exercise.ipynb
src/m.1.2/: Cifar100.ipynb  Untitled (1).ipynb  Untitled-1.py  Untitled1.ipynb  ass2.ipynb  assignment2.ipynb  assignmenttry2.ipynb  attentoin_mechanism.ipynb  conv.ipynb  ex2.ipynb  fashion.ipynb  groupassignment.ipynb  unet-archt.ipynb
src/presentations/001-sentiment-analysis/: model_with_interface.ipynb  sentimentanalysis.ipynb
src/presentations/002-rnn-word-suggestions/: word-suggestion-prefix-autocomplete.ipynb
src/presentations/003-lstm-next-word-prediction/: better_gradio_app.py  better_info.txt  toy_gradio_app.py  toy_info.txt  train_better_model.py  train_toy_model.py
src/presentations/004-gru-sentiment-analysis/: gru-sentiment-analysis.ipynb
src/presentations/005-attention-mechanisam/: attention_mechanism.ipynb
src/presentations/006-autoencoders/: autoencoders.ipynb
(+4 files in other folders)
