[tool.poetry]
package-mode = false
name = "deep_learning"
version = "0.1.0"
description = "TensorFlow project with Jupyter notebook support"
authors = ["Norbel Ambanumben <norbel@ambanumben.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.15.0"
tensorflow-metal = { version = "^1.2.0", markers = "sys_platform == 'darwin'" }
tensorflow-macos = { version = "^2.16.2", markers = "sys_platform == 'darwin'" }
numpy = "^1.26.0"
pandas = "^2.2.0"
jupyterlab = "^4.0.0"
scikit-learn = "^1.4.0"
flask = "^3.0.0"
gtts = "*"
transformers = "*"
ipywidgets = "*"
PyPDF2 = "*"
python-docx = "*"
torch = "*"
librosa = "*"
sounddevice = "*"
# Note: Tkinter (tk) is required for GUI support, but must be installed via your system package manager (e.g., sudo apt-get install python3-tk)
tk = "*"  # For documentation purposes only; install with your OS package manager
datasets = "^3.6.0"
imageio = "^2.37.0"
gradio = "^5.34.0"
seaborn = "^0.13.2"
pydot = "^4.0.0"

[tool.poetry.extras]
nlp = ["transformers", "datasets"]
audio = ["gtts", "librosa", "sounddevice"]
vision = ["imageio"]
gui = ["ipywidgets", "tk"]
ml = ["torch"]
doc = ["PyPDF2", "python-docx"]
web = ["flask", "gradio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
